--- a/_config.yml
+++ b/_config.yml
@@ -1,15 +1,14 @@
 
 # SEO settings
-title: Simplest
-description: "A free Jekyll theme for download"
-keywords: "Jekyll, theme, free, download, SEO, blog, web"
-url: http://nandomoreira.me
-baseurl: "/simplest"
+title: 侯松的博客
+description: "侯松的个人博客，发布大数据技术相关的各种原创文章"
+keywords: "bigdata, hadoop, hbase, hive, presto, flume, spark"
+url: http://housong.github.io
+baseurl: ""
 # baseurl: null
 
 google_analytics: UA-52446115-1
-repo: http://github.com/nandomoreirame/simplest
-disqus_shortname: "fernandomoreira"
+disqus_shortname: "housong"
 
 # Build settings
 permalink   : /:year/:title/
@@ -30,21 +29,17 @@ sass:
 
 # Author settings
 author:
-  name     : Fernando Moreira
-  job      : Frontend Engineer
-  bio      : "Enthusiast performance, responsive design and usability, always looking for the best project and good coffee."
-  thumb    : /images/author.jpg
-  email    : nandomoreira.me@gmail.com
-  url      : http://nandomoreira.me
-  github   : http://github.com/nandomoreirame
-  twitter  : http://twitter.com/nandomoreirame
-  facebook : http://facebook.com/fernando.dev
-  linkedin : http://linkedin.com/in/nandomoreirame
+  name     : Hou Song
+  job      : Bigdata Engineer
+  bio      : "我是一名专业的大数据工程师，写这个博客为了记录工作上和生活上的点滴收获。出了明确标明，其他均属于个人原创，任何形式的转载请联系本人。"
+  thumb    : /images/author.jpeg
+  email    : song.hou@gmail.com
+  url      : http://housong.github.io
+  github   : http://github.com/housong
+  linkedin : https://linkedin.com/in/songhou
 
 # social settings
-og_locale: "pt_BR"
-twitter_card: "summary_large_image"
-twitter_site: "@nandomoreirame"
+og_locale: "zh_CN"
 
 gems:
   - bourbon
