--- a/_config.yml
+++ b/_config.yml
@@ -13,7 +13,7 @@ disqus_shortname: "housong"
 # Build settings
 permalink   : /:year/:title/
 markdown    : kramdown
-highlighter : pygments
+highlighter : rouge
 
 paginate: 4
 paginate_path: "/page/:num/"
