--- a/_config.yml
+++ b/_config.yml
@@ -50,3 +50,6 @@ navbar:
     title: Blog
 
 exclude: ["gulp", "node_modules", "bower", "bower_components", "config.rb", "src", "Gemfile", "Gemfile.lock", ".rvmrc", ".rbenv-version", "package.json", "gulpfile.js", "README.md", "Rakefile", "changelog.md"]
+
+kramdown:
+  syntax_highlighter: rouge
